--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --navy-blue-color: #2E2F42;
     --secondary-text-color: #434455;
     --footer-text-color: #E7E9FC;
+    --background-color: #2E2F42;
 }
 
 
@@ -16,8 +17,12 @@
 body{
     background: #E5E5E5;
     color #434455;
+
     font-family: roboto, sans-serif;
     font-weight: 600;
+    text-decoration: none;
+    letter-spacing: 0.03em;
+    
 }
 
 
@@ -27,6 +32,11 @@ body{
 }
 .logo{
     color: var(--navy-blue-color);
+
+    font-family: Raleway, Monserrat;
+    font-size: 18px;
+    line-height: 1.3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .logo .logo-blue{
     color: var(--iris-color);
@@ -34,35 +44,67 @@ body{
 .logo .logo-white {
     color: #F4F4FD;
 }
-.logo::hover
-.logo::focus
-.logo::active{
-    color: var(--navy-blue-color);
-}
 
-/* site nav */
+                                               /* site nav */
 
 .site-nav .link{
     color: var(--navy-blue-color);
+
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     
 }
-.site-nav .link .auth-link::hover
-.site-nav .link .auth-link::focus
-.site-nav .link .auth-link::active{
+.site-nav .link::hover
+.site-nav .link::focus
+.site-nav .link::active{
     color:var(--iris-color);
 }
-.auth-link{
+
+.auth-nav .auth-link::hover
+.auth-nav .auth-link::focus 
+.auth-nav .auth-link::active {
+    color: var(--iris-color);
+}
+
+.auth-nav .auth-link{
     color: var(--navy-blue-color);
+
+    font-family: inherit;
+    
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 /* main */                                      /* hero */
 
 .hero-title{
     color: #FFFFFF;
+    background-color: var(--background-color);
+
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
 }
 .hero-text{
     color: #FFFFFF;
-    background-color: #4D5AE5;;
+    background-color: #4D5AE5;
+    cursor: pointer;
+
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.18;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
                                          /* advantages */
@@ -70,20 +112,83 @@ body{
     .advantages-title,
     .team-name{
         color: var(--navy-blue-color);
+
+        font-family: roboto, sans-serif
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 2;
+        letter-spacing: 0.02em;
     }
     .advantages-text,
     .team-text{
         color: var(--secondary-text-color);
+
+        font-family: roboto, sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
     }
 
 
 .photos-title, 
 .team-title{
     color: var(--navy-blue-color);
+
+    font-family: roboto, sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
                                           /* footer */
 
 .footer-text{
     color: var(--footer-text-color);
-}                                     
+    background-color: var(--background-color);
+
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}       
+
+                                          /* PORTFOLIO PAGE */
+
+.filters-text{
+    color: var(--iris-color);
+    background-color: #F4F4FD;
+    cursor: pointer;
+
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+}
+.filters-text::active{
+    color: #FFFFFF;
+    background-color: var(--iris-color);
+}
+.gallery-title{
+    color: var(--background-color);
+    text-decoration: none;
+
+    font-family: roboto, sans-serif
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+.gallery-text{
+    color: var(--secondary-text-color);
+    text-decoration: none;
+
+    font-family: roboto, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
