--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,11 @@
 
 
 body{
-    background: #E5E5E5;
+    background: #FFFFFF;
     color #434455;
 
     font-family: roboto, sans-serif;
-    font-weight: 600;
-    text-decoration: none;
+    font-weight: 500;
     letter-spacing: 0.03em;
     
 }
@@ -30,19 +29,31 @@ body{
 .list {
     list-style: none;
 }
+.link{
+    text-decoration: none;
+}
 .logo{
     color: var(--navy-blue-color);
 
     font-family: Raleway, Monserrat;
     font-size: 18px;
     line-height: 1.3;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .logo .logo-blue{
     color: var(--iris-color);
 }
 .logo .logo-white {
     color: #F4F4FD;
+}
+. link .header-text{
+    color: var(--background-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height:1.5;
+    letter-spacing: 0.02em;
+
+
 }
 
                                                /* site nav */
@@ -51,29 +62,29 @@ body{
     color: var(--navy-blue-color);
 
     font-family: inherit;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     
 }
-.site-nav .link::hover
-.site-nav .link::focus
-.site-nav .link::active{
+.site-nav .link:hover,
+.site-nav .link:focus,
+.site-nav .link:active{
     color:var(--iris-color);
 }
 
-.auth-nav .auth-link::hover
-.auth-nav .auth-link::focus 
-.auth-nav .auth-link::active {
+.auth-nav .auth-link:hover,
+.auth-nav .auth-link:focus,
+.auth-nav .auth-link:active {
     color: var(--iris-color);
 }
 
 .auth-nav .auth-link{
-    color: var(--navy-blue-color);
+    color: var(--secondary-text-color)
 
-    font-family: inherit;
-    
+    font-family: roboto, sans-serif;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -81,12 +92,15 @@ body{
 
 /* main */                                      /* hero */
 
+.hero{
+    background-color: var(--background-color);
+}
 .hero-title{
     color: #FFFFFF;
     background-color: var(--background-color);
 
     font-family: Roboto, sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -98,25 +112,31 @@ body{
     cursor: pointer;
 
     font-family: inherit;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     display: flex;
     align-items: center;
     letter-spacing: 0.04em;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.hero-text:active{
+    color: #FFFFFF;
+    background-color: #404BBF;
 }
 
-                                         /* advantages */
+                                         /* advantages and team */
 
+.team{
+    background-color: #F4F4FD;
+}
     .advantages-title,
     .team-name{
         color: var(--navy-blue-color);
 
         font-family: roboto, sans-serif
-        font-weight: 600;
+        font-weight: 500;
         font-size: 20px;
-        line-height: 2;
+        line-height: 1.2;
         letter-spacing: 0.02em;
     }
     .advantages-text,
@@ -135,7 +155,7 @@ body{
     color: var(--navy-blue-color);
 
     font-family: roboto, sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 36px;
     line-height: 1.1;
     text-align: center;
@@ -152,7 +172,10 @@ body{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-}       
+}    
+.footer-all{
+    background-color: var(--background-color);
+}   
 
                                           /* PORTFOLIO PAGE */
 
@@ -162,14 +185,14 @@ body{
     cursor: pointer;
 
     font-family: inherit;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     align-items: center;
     text-align: center;
     letter-spacing: 0.04em;
 }
-.filters-text::active{
+.filters-text:active{
     color: #FFFFFF;
     background-color: var(--iris-color);
 }
@@ -178,7 +201,7 @@ body{
     text-decoration: none;
 
     font-family: roboto, sans-serif
-    font-weight: 600;
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
